src/test/deca/context/valid/created/wrong_decl4.deca
//Description
//    Vérifier la decl de var
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


{
float boolean = 3.0;
}
