src/test/deca/context/invalid/created/print_bool3.deca
//Description :
// Print bool
//
// Resultats :
// Erreur

{
boolean a = true;
print(a);
}
